k8s/apps/dev-app/ai-dev.yaml
# Service 정의
apiVersion: v1
kind: Service

metadata:
  name: ai-dev-service
  namespace: dev-app

# 스펙 지정
spec:
  type: ClusterIP

  # 셀렉터로 어느 Pod에 접근할 것인지
  selector:
    app: ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
# Deployment 정의
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devths-dev-ai
  namespace: dev-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ai

  template:
    metadata:
      labels:
        app: ai

    spec:
      containers:
        - name: devths-ai
          image: ${ECR_IMAGE}
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi" # 이 부분을 현재 설정보다 높여보세요.
              cpu: "1000m"
