k8s/apps/dev-app/backend-ai.yaml
# Service 정의
apiVersion: v1
kind: Service

metadata:
  name: backend-dev-service
  namespace: dev-app

# 스펙 지정
spec:
  type: ClusterIP

  # 셀렉터로 어느 Pod에 접근할 것인지
  selector:
    app: ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
# Deployment 정의
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devths-dev-backend
  namespace: dev-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:

      containers:
        - name: devths-be
          image: ${ECR_IMAGE}
          ports:
            - containerPort: 8080
